add schema route
